# gpt-generation-to-github

./: Cargo.toml
src/: lib.rs  main.rs
