[package]
name = "gpt-generation-to-github"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.75"
async-openai-wasi = "0.0.2"
chrono = "0.4.31"
dotenv = "0.15.0"
hyper = "0.14.27"
# github-flows = "0.6.0"
# openai-flows = "0.9.1"
# slack-flows = "0.3.4"
# tokio_wasi = {version = "1.25.2", features = ["rt"]}

serde_json = "1"
slack-flows = "0.3.4"
tokio_wasi = { version = "1.25.0", features = ["fs", "macros"] }
serde = {version = "1", features = ["derive"]}
http_req_wasi = "0.11.1"
web-scraper-flows = "0.1.0"
